# dir-content-analyzer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
