[project]
name = "dir-content-analyzer"
version = "0.1.0"
description = "A tool for analyzing local directory contents, scanning large files, and AI-powered file classification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "blacktea", email = "1520688026@qq.com" }
]
keywords = ["directory", "analyzer", "file-scanner", "ai", "langchain", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "markdown>=3.0",
    "python-dotenv>=1.0",
    "send2trash>=1.8",
    "streamlit>=1.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/dir-content-analyzer"
Repository = "https://github.com/YOUR_USERNAME/dir-content-analyzer"
Issues = "https://github.com/YOUR_USERNAME/dir-content-analyzer/issues"

[project.scripts]
dir-analyzer = "main:main"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"